--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>com.github.elizabetht</groupId>
   <artifactId>StudentEnrollmentWithSpring</artifactId>
   <packaging>war</packaging>
-  <version>1.6</version>
+  <version>1.6-SNAPSHOT</version>
   <name>StudentEnrollmentWithSpring Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <parent>
@@ -77,9 +77,9 @@
     </dependency>
   </dependencies>
   <scm>
-		<connection>scm:git:https://github.com/elizabetht/StudentEnrollmentWithSpring.git</connection>
-		<developerConnection>scm:git:https://github.com/elizabetht/StudentEnrollmentWithSpring.git</developerConnection>
-		<url>https://github.com/elizabetht/StudentEnrollmentWithSpring.git</url>
+		<connection>scm:git:git@github.com:elizabetht/StudentEnrollmentWithSpring.git</connection>
+		<developerConnection>scm:git:git@github.com:elizabetht/StudentEnrollmentWithSpring.git</developerConnection>
+		<url>git@github.com:elizabetht/StudentEnrollmentWithSpring.git</url>
 	</scm>
 	<developers>
 		<developer>
