--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,7 @@
 	</scm>
 	<developers>
 		<developer>
-			<id>email2eliza@gmail.com</id>
+			<id>elizabetht</id>
 			<name>Elizabeth Thomas</name>
 			<email>email2eliza@gmail.com</email>
 		</developer>
