--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
   <scm>
 		<connection>scm:git:git@github.com:elizabetht/StudentEnrollmentWithSpring.git</connection>
 		<developerConnection>scm:git:git@github.com:elizabetht/StudentEnrollmentWithSpring.git</developerConnection>
-		<url>https://github.com/elizabetht/StudentEnrollmentWithSpring.git</url>
+		<url>git@github.com:elizabetht/StudentEnrollmentWithSpring.git</url>
 	</scm>
 	<developers>
 		<developer>
